	 widget/filesel.c: return value of malloc() shouldn't be cast.
20070902 debugger/breakpoint.c: fix typo which prevented timed breakpoints
	 from working properly.
20070903 compat/morphos/osname.c: add missing return value from compat_osname
         (thanks, Q-Master) (Fred).
20070903 ui/gtk/fileselector.c: reimplement "last directory" functionality
	 (and some obvious refactoring).
20070903 fuse.c: add missing #include (Stuart).
20070904 disk/plusd.c,divide.c: clear plusd_active and divide_active on a reset
	 (fixes bug #1755555) (Stuart).
20070904 disk/plusd.[ch],periph.c: register plusd_peripherals in periph_setup()
	 instead of periph_update(), and modify +D IO port handlers to return
	 when the +D is not available (fixes #1771585) (Stuart).
20070904 Makefile.am: distribute the timer directory (Stuart).
20070904 z80/coretest.c: remove unused variable (Stuart).
20070905 Makefile.am: allow windres.o to build from a directory other than the
	 source directory (Stuart).
20070905 Makefile.am,debugger/Makefile.am,lib/Makefile.am,ui/gtk/Makefile.am,
	 z80/Makefile.am: clean generated files on 'make clean' etc.
20070905 ui/{fb/Makefile.am,ggi/Makefile.am,sdl/Makefile.am,svga/Makefile.am,
	 win32/Makefile.am,xlib/Makefile.am},widget/Makefile.am: clean more
	 generated files on 'make clean' (Stuart).
20070905 ui/ggi: remove unused directory.
20070905 ui/{fb/Makefile.am,svga/Makefile.am}: allow building from a directory
	 other than the source directory (Stuart).
20070905 ui/svga/Makefile.am: add missing '/' (Stuart).
20070905 ui/fb/fbkeyboard.c: fix compilation (Stuart).
20070905 configure.in: fix compilation when target_os is mingw32msvc (Stuart).
20070905 configure.in: add --without-libxml2 option (Stuart).
20070905 Makefile.am: use $@.tmp consistently (Stuart).
20070905 configure.in: fix --without-libxml2, add --without-libsamplerate
	 option, tidy up --with-disk-prefix help and rename --with-joystick to
	 --without-joystick in help (Stuart).