@@ -23,7 +23,7 @@
 
 */
 
-#include <windows.h>
+#include <config.h>
 
 #define IDM_MENU_FILE 100
 #define IDM_MENU_FILE_OPEN 101
@@ -41,10 +41,14 @@
 #define IDM_MENU_FILE_AYLOGGING_STOP 113
 #define IDM_MENU_FILE_OPENSCRSCREENSHOT 114
 #define IDM_MENU_FILE_SAVESCREENASSCR 115
+#ifdef USE_LIBPNG
 #define IDM_MENU_FILE_SAVESCREENASPNG 116
+#endif
 #define IDM_MENU_FILE_MOVIES 117
 #define IDM_MENU_FILE_MOVIES_RECORDMOVIEASSCR 118
+#ifdef USE_LIBPNG
 #define IDM_MENU_FILE_MOVIES_RECORDMOVIEASPNG 119
+#endif
 #define IDM_MENU_FILE_MOVIES_STOPMOVIERECORDING 120
 #define IDM_MENU_FILE_LOADBINARYDATA 121
 #define IDM_MENU_FILE_SAVEBINARYDATA 122
@@ -74,161 +78,164 @@
 #define IDM_MENU_OPTIONS_SELECTROMS_SPECTRUMSE 146
 #define IDM_MENU_OPTIONS_SELECTROMS_INTERFACEI 147
 #define IDM_MENU_OPTIONS_FILTER 148
-#define IDM_MENU_MACHINE 149
-#define IDM_MENU_MACHINE_PAUSE 150
-#define IDM_MENU_MACHINE_RESET 151
-#define IDM_MENU_MACHINE_HARDRESET 152
-#define IDM_MENU_MACHINE_SELECT 153
-#define IDM_MENU_MACHINE_DEBUGGER 154
-#define IDM_MENU_MACHINE_POKEFINDER 155
-#define IDM_MENU_MACHINE_MEMORYBROWSER 156
-#define IDM_MENU_MACHINE_PROFILER 157
-#define IDM_MENU_MACHINE_PROFILER_START 158
-#define IDM_MENU_MACHINE_PROFILER_STOP 159
-#define IDM_MENU_MACHINE_NMI 160
-#define IDM_MENU_MEDIA 161
-#define IDM_MENU_MEDIA_TAPE 162
-#define IDM_MENU_MEDIA_TAPE_OPEN 163
-#define IDM_MENU_MEDIA_TAPE_PLAY 164
-#define IDM_MENU_MEDIA_TAPE_BROWSE 165
-#define IDM_MENU_MEDIA_TAPE_REWIND 166
-#define IDM_MENU_MEDIA_TAPE_CLEAR 167
-#define IDM_MENU_MEDIA_TAPE_WRITE 168
-#define IDM_MENU_MEDIA_TAPE_RECORDSTART 169
-#define IDM_MENU_MEDIA_TAPE_RECORDSTOP 170
-#define IDM_MENU_MEDIA_INTERFACEI 171
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE1 172
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE1_INSERTNEW 173
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE1_INSERT 174
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE1_SYNC 175
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE1_EJECT 176
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE1_WRITEPROTECT 177
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE1_WRITEPROTECT_SET 178
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE1_WRITEPROTECT_REMOVE 179
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE2 180
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE2_INSERTNEW 181
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE2_INSERT 182
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE2_SYNC 183
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE2_EJECT 184
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE2_WRITEPROTECT 185
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE2_WRITEPROTECT_SET 186
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE2_WRITEPROTECT_REMOVE 187
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE3 188
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE3_INSERTNEW 189
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE3_INSERT 190
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE3_SYNC 191
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE3_EJECT 192
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE3_WRITEPROTECT 193
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE3_WRITEPROTECT_SET 194
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE3_WRITEPROTECT_REMOVE 195
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE4 196
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE4_INSERTNEW 197
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE4_INSERT 198
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE4_SYNC 199
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE4_EJECT 200
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE4_WRITEPROTECT 201
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE4_WRITEPROTECT_SET 202
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE4_WRITEPROTECT_REMOVE 203
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE5 204
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE5_INSERTNEW 205
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE5_INSERT 206
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE5_SYNC 207
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE5_EJECT 208
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE5_WRITEPROTECT 209
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE5_WRITEPROTECT_SET 210
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE5_WRITEPROTECT_REMOVE 211
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE6 212
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE6_INSERTNEW 213
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE6_INSERT 214
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE6_SYNC 215
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE6_EJECT 216
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE6_WRITEPROTECT 217
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE6_WRITEPROTECT_SET 218
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE6_WRITEPROTECT_REMOVE 219
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE7 220
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE7_INSERTNEW 221
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE7_INSERT 222
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE7_SYNC 223
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE7_EJECT 224
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE7_WRITEPROTECT 225
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE7_WRITEPROTECT_SET 226
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE7_WRITEPROTECT_REMOVE 227
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE8 228
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE8_INSERTNEW 229
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE8_INSERT 230
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE8_SYNC 231
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE8_EJECT 232
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE8_WRITEPROTECT 233
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE8_WRITEPROTECT_SET 234
-#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE8_WRITEPROTECT_REMOVE 235
-#define IDM_MENU_MEDIA_DISK 236
-#define IDM_MENU_MEDIA_DISK_3 237
-#define IDM_MENU_MEDIA_DISK_3_DRIVEA 238
-#define IDM_MENU_MEDIA_DISK_3_DRIVEA_INSERT 239
-#define IDM_MENU_MEDIA_DISK_3_DRIVEA_EJECT 240
-#define IDM_MENU_MEDIA_DISK_3_DRIVEA_EJECTANDWRITE 241
-#define IDM_MENU_MEDIA_DISK_3_DRIVEB 242
-#define IDM_MENU_MEDIA_DISK_3_DRIVEB_INSERT 243
-#define IDM_MENU_MEDIA_DISK_3_DRIVEB_EJECT 244
-#define IDM_MENU_MEDIA_DISK_3_DRIVEB_EJECTANDWRITE 245
-#define IDM_MENU_MEDIA_DISK_TRDOS 246
-#define IDM_MENU_MEDIA_DISK_TRDOS_DRIVEA 247
-#define IDM_MENU_MEDIA_DISK_TRDOS_DRIVEA_INSERT 248
-#define IDM_MENU_MEDIA_DISK_TRDOS_DRIVEA_EJECT 249
-#define IDM_MENU_MEDIA_DISK_TRDOS_DRIVEA_EJECTANDWRITE 250
-#define IDM_MENU_MEDIA_DISK_TRDOS_DRIVEB 251
-#define IDM_MENU_MEDIA_DISK_TRDOS_DRIVEB_INSERT 252
-#define IDM_MENU_MEDIA_DISK_TRDOS_DRIVEB_EJECT 253
-#define IDM_MENU_MEDIA_DISK_TRDOS_DRIVEB_EJECTANDWRITE 254
-#define IDM_MENU_MEDIA_DISK_D 255
-#define IDM_MENU_MEDIA_DISK_D_DRIVE1 256
-#define IDM_MENU_MEDIA_DISK_D_DRIVE1_INSERT 257
-#define IDM_MENU_MEDIA_DISK_D_DRIVE1_EJECT 258
-#define IDM_MENU_MEDIA_DISK_D_DRIVE1_EJECTANDWRITE 259
-#define IDM_MENU_MEDIA_DISK_D_DRIVE2 260
-#define IDM_MENU_MEDIA_DISK_D_DRIVE2_INSERT 261
-#define IDM_MENU_MEDIA_DISK_D_DRIVE2_EJECT 262
-#define IDM_MENU_MEDIA_DISK_D_DRIVE2_EJECTANDWRITE 263
-#define IDM_MENU_MEDIA_CARTRIDGE 264
-#define IDM_MENU_MEDIA_CARTRIDGE_TIMEXDOCK 265
-#define IDM_MENU_MEDIA_CARTRIDGE_TIMEXDOCK_INSERT 266
-#define IDM_MENU_MEDIA_CARTRIDGE_TIMEXDOCK_EJECT 267
-#define IDM_MENU_MEDIA_CARTRIDGE_INTERFACEII 268
-#define IDM_MENU_MEDIA_CARTRIDGE_INTERFACEII_INSERT 269
-#define IDM_MENU_MEDIA_CARTRIDGE_INTERFACEII_EJECT 270
-#define IDM_MENU_MEDIA_IDE 271
-#define IDM_MENU_MEDIA_IDE_SIMPLE8BIT 272
-#define IDM_MENU_MEDIA_IDE_SIMPLE8BIT_MASTER 273
-#define IDM_MENU_MEDIA_IDE_SIMPLE8BIT_MASTER_INSERT 274
-#define IDM_MENU_MEDIA_IDE_SIMPLE8BIT_MASTER_COMMIT 275
-#define IDM_MENU_MEDIA_IDE_SIMPLE8BIT_MASTER_EJECT 276
-#define IDM_MENU_MEDIA_IDE_SIMPLE8BIT_SLAVE 277
-#define IDM_MENU_MEDIA_IDE_SIMPLE8BIT_SLAVE_INSERT 278
-#define IDM_MENU_MEDIA_IDE_SIMPLE8BIT_SLAVE_COMMIT 279
-#define IDM_MENU_MEDIA_IDE_SIMPLE8BIT_SLAVE_EJECT 280
-#define IDM_MENU_MEDIA_IDE_ZXATASP 281
-#define IDM_MENU_MEDIA_IDE_ZXATASP_MASTER 282
-#define IDM_MENU_MEDIA_IDE_ZXATASP_MASTER_INSERT 283
-#define IDM_MENU_MEDIA_IDE_ZXATASP_MASTER_COMMIT 284
-#define IDM_MENU_MEDIA_IDE_ZXATASP_MASTER_EJECT 285
-#define IDM_MENU_MEDIA_IDE_ZXATASP_SLAVE 286
-#define IDM_MENU_MEDIA_IDE_ZXATASP_SLAVE_INSERT 287
-#define IDM_MENU_MEDIA_IDE_ZXATASP_SLAVE_COMMIT 288
-#define IDM_MENU_MEDIA_IDE_ZXATASP_SLAVE_EJECT 289
-#define IDM_MENU_MEDIA_IDE_ZXCFCOMPACTFLASH 290
-#define IDM_MENU_MEDIA_IDE_ZXCFCOMPACTFLASH_INSERT 291
-#define IDM_MENU_MEDIA_IDE_ZXCFCOMPACTFLASH_COMMIT 292
-#define IDM_MENU_MEDIA_IDE_ZXCFCOMPACTFLASH_EJECT 293
-#define IDM_MENU_MEDIA_IDE_DIVIDE 294
-#define IDM_MENU_MEDIA_IDE_DIVIDE_MASTER 295
-#define IDM_MENU_MEDIA_IDE_DIVIDE_MASTER_INSERT 296
-#define IDM_MENU_MEDIA_IDE_DIVIDE_MASTER_COMMIT 297
-#define IDM_MENU_MEDIA_IDE_DIVIDE_MASTER_EJECT 298
-#define IDM_MENU_MEDIA_IDE_DIVIDE_SLAVE 299
-#define IDM_MENU_MEDIA_IDE_DIVIDE_SLAVE_INSERT 300
-#define IDM_MENU_MEDIA_IDE_DIVIDE_SLAVE_COMMIT 301
-#define IDM_MENU_MEDIA_IDE_DIVIDE_SLAVE_EJECT 302
-#define IDM_MENU_HELP 303
-#define IDM_MENU_HELP_KEYBOARD 304
-
-void handle_menu( DWORD cmd, HWND okno );
+#ifdef HAVE_LIB_XML2
+#define IDM_MENU_OPTIONS_SAVE 149
+#endif
+#define IDM_MENU_MACHINE 150
+#define IDM_MENU_MACHINE_PAUSE 151
+#define IDM_MENU_MACHINE_RESET 152
+#define IDM_MENU_MACHINE_HARDRESET 153
+#define IDM_MENU_MACHINE_SELECT 154
+#define IDM_MENU_MACHINE_DEBUGGER 155
+#define IDM_MENU_MACHINE_POKEFINDER 156
+#define IDM_MENU_MACHINE_MEMORYBROWSER 157
+#define IDM_MENU_MACHINE_PROFILER 158
+#define IDM_MENU_MACHINE_PROFILER_START 159
+#define IDM_MENU_MACHINE_PROFILER_STOP 160
+#define IDM_MENU_MACHINE_NMI 161
+#define IDM_MENU_MEDIA 162
+#define IDM_MENU_MEDIA_TAPE 163
+#define IDM_MENU_MEDIA_TAPE_OPEN 164
+#define IDM_MENU_MEDIA_TAPE_PLAY 165
+#define IDM_MENU_MEDIA_TAPE_BROWSE 166
+#define IDM_MENU_MEDIA_TAPE_REWIND 167
+#define IDM_MENU_MEDIA_TAPE_CLEAR 168
+#define IDM_MENU_MEDIA_TAPE_WRITE 169
+#define IDM_MENU_MEDIA_TAPE_RECORDSTART 170
+#define IDM_MENU_MEDIA_TAPE_RECORDSTOP 171
+#define IDM_MENU_MEDIA_INTERFACEI 172
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE1 173
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE1_INSERTNEW 174
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE1_INSERT 175
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE1_SYNC 176
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE1_EJECT 177
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE1_WRITEPROTECT 178
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE1_WRITEPROTECT_SET 179
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE1_WRITEPROTECT_REMOVE 180
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE2 181
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE2_INSERTNEW 182
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE2_INSERT 183
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE2_SYNC 184
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE2_EJECT 185
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE2_WRITEPROTECT 186
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE2_WRITEPROTECT_SET 187
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE2_WRITEPROTECT_REMOVE 188
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE3 189
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE3_INSERTNEW 190
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE3_INSERT 191
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE3_SYNC 192
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE3_EJECT 193
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE3_WRITEPROTECT 194
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE3_WRITEPROTECT_SET 195
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE3_WRITEPROTECT_REMOVE 196
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE4 197
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE4_INSERTNEW 198
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE4_INSERT 199
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE4_SYNC 200
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE4_EJECT 201
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE4_WRITEPROTECT 202
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE4_WRITEPROTECT_SET 203
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE4_WRITEPROTECT_REMOVE 204
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE5 205
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE5_INSERTNEW 206
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE5_INSERT 207
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE5_SYNC 208
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE5_EJECT 209
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE5_WRITEPROTECT 210
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE5_WRITEPROTECT_SET 211
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE5_WRITEPROTECT_REMOVE 212
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE6 213
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE6_INSERTNEW 214
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE6_INSERT 215
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE6_SYNC 216
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE6_EJECT 217
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE6_WRITEPROTECT 218
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE6_WRITEPROTECT_SET 219
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE6_WRITEPROTECT_REMOVE 220
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE7 221
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE7_INSERTNEW 222
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE7_INSERT 223
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE7_SYNC 224
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE7_EJECT 225
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE7_WRITEPROTECT 226
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE7_WRITEPROTECT_SET 227
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE7_WRITEPROTECT_REMOVE 228
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE8 229
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE8_INSERTNEW 230
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE8_INSERT 231
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE8_SYNC 232
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE8_EJECT 233
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE8_WRITEPROTECT 234
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE8_WRITEPROTECT_SET 235
+#define IDM_MENU_MEDIA_INTERFACEI_MICRODRIVE8_WRITEPROTECT_REMOVE 236
+#define IDM_MENU_MEDIA_DISK 237
+#define IDM_MENU_MEDIA_DISK_3 238
+#define IDM_MENU_MEDIA_DISK_3_DRIVEA 239
+#define IDM_MENU_MEDIA_DISK_3_DRIVEA_INSERT 240
+#define IDM_MENU_MEDIA_DISK_3_DRIVEA_EJECT 241
+#define IDM_MENU_MEDIA_DISK_3_DRIVEA_EJECTANDWRITE 242
+#define IDM_MENU_MEDIA_DISK_3_DRIVEB 243
+#define IDM_MENU_MEDIA_DISK_3_DRIVEB_INSERT 244
+#define IDM_MENU_MEDIA_DISK_3_DRIVEB_EJECT 245
+#define IDM_MENU_MEDIA_DISK_3_DRIVEB_EJECTANDWRITE 246
+#define IDM_MENU_MEDIA_DISK_TRDOS 247
+#define IDM_MENU_MEDIA_DISK_TRDOS_DRIVEA 248
+#define IDM_MENU_MEDIA_DISK_TRDOS_DRIVEA_INSERT 249
+#define IDM_MENU_MEDIA_DISK_TRDOS_DRIVEA_EJECT 250
+#define IDM_MENU_MEDIA_DISK_TRDOS_DRIVEA_EJECTANDWRITE 251
+#define IDM_MENU_MEDIA_DISK_TRDOS_DRIVEB 252
+#define IDM_MENU_MEDIA_DISK_TRDOS_DRIVEB_INSERT 253
+#define IDM_MENU_MEDIA_DISK_TRDOS_DRIVEB_EJECT 254
+#define IDM_MENU_MEDIA_DISK_TRDOS_DRIVEB_EJECTANDWRITE 255
+#ifdef HAVE_LIBDSK_H
+#define IDM_MENU_MEDIA_DISK_D 256
+#define IDM_MENU_MEDIA_DISK_D_DRIVE1 257
+#define IDM_MENU_MEDIA_DISK_D_DRIVE1_INSERT 258
+#define IDM_MENU_MEDIA_DISK_D_DRIVE1_EJECT 259
+#define IDM_MENU_MEDIA_DISK_D_DRIVE1_EJECTANDWRITE 260
+#define IDM_MENU_MEDIA_DISK_D_DRIVE2 261
+#define IDM_MENU_MEDIA_DISK_D_DRIVE2_INSERT 262
+#define IDM_MENU_MEDIA_DISK_D_DRIVE2_EJECT 263
+#define IDM_MENU_MEDIA_DISK_D_DRIVE2_EJECTANDWRITE 264
+#endif
+#define IDM_MENU_MEDIA_CARTRIDGE 265
+#define IDM_MENU_MEDIA_CARTRIDGE_TIMEXDOCK 266
+#define IDM_MENU_MEDIA_CARTRIDGE_TIMEXDOCK_INSERT 267
+#define IDM_MENU_MEDIA_CARTRIDGE_TIMEXDOCK_EJECT 268
+#define IDM_MENU_MEDIA_CARTRIDGE_INTERFACEII 269
+#define IDM_MENU_MEDIA_CARTRIDGE_INTERFACEII_INSERT 270
+#define IDM_MENU_MEDIA_CARTRIDGE_INTERFACEII_EJECT 271
+#define IDM_MENU_MEDIA_IDE 272
+#define IDM_MENU_MEDIA_IDE_SIMPLE8BIT 273
+#define IDM_MENU_MEDIA_IDE_SIMPLE8BIT_MASTER 274
+#define IDM_MENU_MEDIA_IDE_SIMPLE8BIT_MASTER_INSERT 275
+#define IDM_MENU_MEDIA_IDE_SIMPLE8BIT_MASTER_COMMIT 276
+#define IDM_MENU_MEDIA_IDE_SIMPLE8BIT_MASTER_EJECT 277
+#define IDM_MENU_MEDIA_IDE_SIMPLE8BIT_SLAVE 278
+#define IDM_MENU_MEDIA_IDE_SIMPLE8BIT_SLAVE_INSERT 279
+#define IDM_MENU_MEDIA_IDE_SIMPLE8BIT_SLAVE_COMMIT 280
+#define IDM_MENU_MEDIA_IDE_SIMPLE8BIT_SLAVE_EJECT 281
+#define IDM_MENU_MEDIA_IDE_ZXATASP 282
+#define IDM_MENU_MEDIA_IDE_ZXATASP_MASTER 283
+#define IDM_MENU_MEDIA_IDE_ZXATASP_MASTER_INSERT 284
+#define IDM_MENU_MEDIA_IDE_ZXATASP_MASTER_COMMIT 285
+#define IDM_MENU_MEDIA_IDE_ZXATASP_MASTER_EJECT 286
+#define IDM_MENU_MEDIA_IDE_ZXATASP_SLAVE 287
+#define IDM_MENU_MEDIA_IDE_ZXATASP_SLAVE_INSERT 288
+#define IDM_MENU_MEDIA_IDE_ZXATASP_SLAVE_COMMIT 289
+#define IDM_MENU_MEDIA_IDE_ZXATASP_SLAVE_EJECT 290
+#define IDM_MENU_MEDIA_IDE_ZXCFCOMPACTFLASH 291
+#define IDM_MENU_MEDIA_IDE_ZXCFCOMPACTFLASH_INSERT 292
+#define IDM_MENU_MEDIA_IDE_ZXCFCOMPACTFLASH_COMMIT 293
+#define IDM_MENU_MEDIA_IDE_ZXCFCOMPACTFLASH_EJECT 294
+#define IDM_MENU_MEDIA_IDE_DIVIDE 295
+#define IDM_MENU_MEDIA_IDE_DIVIDE_MASTER 296
+#define IDM_MENU_MEDIA_IDE_DIVIDE_MASTER_INSERT 297
+#define IDM_MENU_MEDIA_IDE_DIVIDE_MASTER_COMMIT 298
+#define IDM_MENU_MEDIA_IDE_DIVIDE_MASTER_EJECT 299
+#define IDM_MENU_MEDIA_IDE_DIVIDE_SLAVE 300
+#define IDM_MENU_MEDIA_IDE_DIVIDE_SLAVE_INSERT 301
+#define IDM_MENU_MEDIA_IDE_DIVIDE_SLAVE_COMMIT 302
+#define IDM_MENU_MEDIA_IDE_DIVIDE_SLAVE_EJECT 303
+#define IDM_MENU_HELP 304
+#define IDM_MENU_HELP_KEYBOARD 305
